--- a/project.config.json
+++ b/project.config.json
@@ -30,12 +30,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "更多",
-					"pathName": "pages/more/index"
+					"pathName": "pages/more/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "名片夹",
+					"pathName": "pages/carde/index"
 				}
 			]
 		}
