--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     ,"pages/carde/index"
     ,"pages/carde/other/other"
     ,"pages/sendCarde/index"
+    ,"pages/sendCarde/outCarde/outCarde"
     ,"pages/more/index"
     ,"pages/more/helper/helper"
     
