--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
@@ -60,6 +60,12 @@
 					"id": -1,
 					"name": "递名片",
 					"pathName": "pages/sendCarde/outCarde/outCarde",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "拍照",
+					"pathName": "pages/carde/album/index",
 					"query": ""
 				}
 			]
