--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     ,"pages/carde/other/other"
     ,"pages/sendCarde/index"
     ,"pages/sendCarde/outCarde/outCarde"
+    ,"pages/sendCarde/rank/rank"
     ,"pages/more/index"
     ,"pages/more/helper/helper"
     
